deploy/operator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jenkins-operator
  template:
    metadata:
      labels:
        name: jenkins-operator
    spec:
      serviceAccountName: jenkins-operator
      containers:
        - name: jenkins-operator
          image: virtuslab/jenkins-operator:v0.5.0
          command:
          - jenkins-operator
          args: []
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: cert
            readOnly: true
          ports:
          - containerPort: 9443
            name: webhook-server
            protocol: TCP
